@@ -29,6 +29,7 @@ ctags-NEXT (Mon June 6 2007)
 * Fixed typo in man page [Debian bug #366412].
 * Fixed missing chunk of text in man page and over-use of hyphens in UTF-8 locales [Debian bug #271323].
 * Fixed parsing of ` as a method name [Ruby].
+* Fixed parsing of keywords in string literals [Ruby, Bug #1742588].
 * Fixed potential segmentation violation [Bug #1672834, Bug #1222926].
 * Fixed parsing of destructors with whitespace after the '~' [C++, Bug #1585745].
 * Fixed default access of unions to be public [C++, Bug #1548443].
